<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/leftsidemenu_width"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/lightest_purple">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/leftsidemenu_padding_top">

        <TextView
            android:id="@+id/sidebar_currentlist_screen"
            style="@style/SidebarItem"
            android:text="@string/leftsidemenu_current_shoppinglist" />

        <TextView
            android:id="@+id/sidebar_historiclist_screen"
            style="@style/SidebarItem"
            android:text="@string/leftsidemenu_historic_shoppinglists" />

        <TextView
            android:id="@+id/sidebar_statistics_screen"
            style="@style/SidebarItem"
            android:text="@string/leftsidemenu_statistics" />

        <TextView
            android:id="@+id/sidebar_about_screen"
            style="@style/SidebarItem"
            android:text="@string/leftsidemenu_about" />

        <Space
            android:layout_width="1dp"
            android:layout_height="@dimen/leftsidemenu_line_heigth"/>

        <TextView
            android:id="@+id/sidebar_exit"
            style="@style/SidebarItem.Secondary"
            android:text="@string/leftsidemenu_exit" />

    </LinearLayout>

</ScrollView>