<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_bigger">

        <Button
            android:id="@+id/currentlist_Btn"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_bigger"
            android:text="@string/currentList_finish_currentlist_btn" />

        <TextView
            android:id="@+id/currentlist_noproductinlist_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_bigger"
            android:text="@string/currentList_noproductinlist_tv"
            android:textColor="@color/dark_purple"
            android:visibility="gone" />

        <TextView
            android:id="@+id/currentlist_how_tu_use_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_bigger"
            android:text="@string/currentList_howtouse_tv"
            android:textColor="@color/dark_purple" />

    </LinearLayout>

</RelativeLayout>
