<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/my_toolbar"
    style="@style/Toolbar"
    android:minHeight="?attr/actionBarSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/toolbarTv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:lines="1"
            android:textColor="@color/white"
            android:textSize="@dimen/font_big"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/toolbarShoppingCartIv"
            android:layout_width="@dimen/toolbar_iv_width"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/padding_smaller"
            android:layout_marginRight="@dimen/padding_smaller"
            android:contentDescription="@string/toolbar_shopping_cart_iv_cd"
            android:src="@drawable/ic_shopping_cart_white_24dp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/toolbarArrowUpIv"
            android:layout_width="@dimen/toolbar_iv_width"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/padding_smaller"
            android:layout_marginRight="@dimen/padding_smaller"
            android:contentDescription="@string/toolbar_arrow_up_iv_cd"
            android:src="@drawable/ic_arrow_upward_white_24dp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/toolbarArrowDownIv"
            android:layout_width="@dimen/toolbar_iv_width"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/padding_smaller"
            android:layout_marginRight="@dimen/padding_smaller"
            android:contentDescription="@string/toolbar_arrow_down_iv_cd"
            android:src="@drawable/ic_arrow_downward_white_24dp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/toolbarEditIv"
            android:layout_width="@dimen/toolbar_iv_width"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/padding_smaller"
            android:layout_marginStart="@dimen/padding_smaller"
            android:contentDescription="@string/toolbar_edit_iv_cd"
            android:src="@drawable/icon_actionbar_edit"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/toolbarDeleteIv"
            android:layout_width="@dimen/toolbar_iv_width"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/padding_smaller"
            android:layout_marginRight="@dimen/padding_smaller"
            android:contentDescription="@string/toolbar_delete_iv_cd"
            android:src="@drawable/trash_bin_white"
            android:visibility="gone" />

    </LinearLayout>

</android.support.v7.widget.Toolbar>